@@ -1,4 +1,7 @@
 2007-11-23 Stewart Adam <s.adam@diffingo.com>
+     * Update spec file (use %{gitdate})
+
+2007-11-23 Stewart Adam <s.adam@diffingo.com>
      * Fix the OSError exceptions when calling run_command
      * Display Generation options on --help and parse them too
      * We have env in run_command, but let's pass it to subprocess.Popen too
